# step-functions-state-machine

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py  setup.sh  tox.ini
.github/: CODEOWNERS
.github/workflows/: python-app.yml
step-functions-state-machine/: state_machine.py
step-functions-state-machine/data/: state.json
step_functions_local/: __init__.py  choice_helper.py  execution_history.py  jsonpath.py  state_machine.py  validate.py
step_functions_local/data/: state.json  task.json
test/: test_FakeStateMachine-run.py  test_FakeStateMachine-runCondition.py  test_FakeStateMachine-runPartial.py  test_FakeStateMachine-runState.py  test_RunStateResult.py  test_jsonpath.py  test_readme_example.py  utils.py
test/fixtures/definitions/: choice-more-than-one-choice.json  copy-object.json  pass-input-to-resultpath.json  state-with-end-is-true.json  state-with-next-property.json  state-without-next-and-end.json  task-input-to-resource.json  task-inputpath-is-none.json
test/helper/: test_choice_helper.py
